# flask-cicd-demo

./: Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: main.yaml
