[project]
name = "flask-cicd-demo"
version = "0.1.0"
description = ""
authors = [
  {name = "Jonathan Moriceau", email = "moriceauj@hotmai.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["flask>=3.1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"